@@ -80,15 +80,9 @@ class ScoreRender
 		}
 		else
 		{
-			if (!$invert)
-			{
-				$cmd .= '-channel alpha ' . $rendered_image . ' ' . $final_image;
-			}
-			else
-			{
-				$cmd .=	'-channel alpha -fx intensity -channel rgb -negate ' .
-					$rendered_image . ' ' .  $final_image;
-			}
+			$cmd .= '-channel alpha -fx intensity ' .
+				($invert ? '-channel rgb -negate ' : '') .
+				$rendered_image . ' ' . $final_image;
 		}
 
 		$retval = ScoreRender::_exec ($cmd);
